feat(domain,repo): add input/output ArtifactKind support to model embeddings